samples/_failures_safe/1761394652_711200_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9e0fe01.c: In function ‘main’:
./samples/SAFE/__tmp_f9e0fe01.c:139:43: error: expected ‘)’ at end of input
  139 |         for (int i = 0; i < entry_count; i
      |             ~                             ^
      |                                           )
./samples/SAFE/__tmp_f9e0fe01.c:139:9: error: expected declaration or statement at end of input
  139 |         for (int i = 0; i < entry_count; i
      |         ^~~
./samples/SAFE/__tmp_f9e0fe01.c:139:9: error: expected declaration or statement at end of input
